# youtube-note-manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
src/youtube_note/: __main__.py  model.py  server.py  storage.py
src/youtube_note/templates/: _note_card.html  index.html
test/: server_test.py
