[tool.poetry]
name = "youtube-note"
version = "0.1.0"
description = ""
authors = ["Adhika Setya Pramudita <adhika.setya.p@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "youtube_note", from = "src" }
]
include = [
    "src/youtube_note/templates/**/*",
    "src/youtube_note/static/**/*"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.116.1"
langchain = "^0.3.27"
langchain-openai = "^0.3.30"
youtube-transcript-api = "^1.2.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.24"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    'ignore:Please use `import python_multipart` instead\.:PendingDeprecationWarning',
]